--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     
-
-    
+<div class="container">
+    <header>
+        <img src="/assets/assets/logo.svg" alt="logo">
+    <nav> 
+        <a href="#">Feautures</a>
+        <a href="#">About</a>
+        <a href="#">Launch</a>
+        <a href="#">Sign Up</a>
+    </nav>
+</header>
+</div>
 </body>
 </html>
