section class="one"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
         <a href="#">Launch</a>
         <a href="#">Sign Up</a>
     </nav>
-</header>
+    </header>
+
+    <main>
+        <section class="one">
+            <div class="text">
+                <h5>LAUNCHING SON</h5>
+                <h1>An NFT like no other</h1>
+                <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="image">
+                <img src="/assets/assets/graphic.svg" alt="graphic">
+            </div>
+        </section>
+    </main>
+
+
+
+
 </div>
 </body>
 </html>
