section class="two"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             </div>
         </section>
 
-        
+        <section class="two">
+            <h2>Free NFT for early birs</h2>
+            <p>Sign up today and you'll get a free NFT when we launch.</p>
+        </section>
 
 
 
