section class="three"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
             <p>Sign up today and you'll get a free NFT when we launch.</p>
         </section>
 
-
+        <section class="three">
+            <img src="/assets/assets/companies/1.svg" alt="Boomerang">
+            <img src="/assets/assets/companies/2.svg" alt="Blimp">
+            <img src="/assets/assets/companies/3.svg" alt="qrco">
+            <img src="/assets/assets/companies/4.svg" alt="OpenDoor">
+            <img src="/assets/assets/companies/5.svg" alt="Droplet">
+        </section>
 
     </main>
 
