section class="four"

--- a/index.html
+++ b/index.html
@@ -47,6 +47,119 @@
             <img src="/assets/assets/companies/5.svg" alt="Droplet">
         </section>
 
+        <section class="four">
+            <div class="four-info">
+             <h2>LE Super Rare Auction</h2>
+                <p>We have released four limited edition NFTs early whick can be bid on via <a href="#">OpenSea</a>. </p>
+            </div>
+
+         <div class="four-table">
+            <table>
+            <div class="grid1">   
+                <img src="/assets/assets/ntfs/ntf-1.svg" alt="Purple">
+            </div>
+            <div class="grid2">
+            <thead>
+                <tr>
+                    <th class="gloop">GLOOP SERIES</th>
+                    <th class="top">TOP BID</th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td class="color">Purple man</td>
+                <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
+                </tr>
+                <tr>
+                <td class="number">#12983</td>
+                <td class="days">1 day left</td>
+                </tr>
+            </tbody>
+            </div>
+            </table>
+
+            <table>
+                <div class="grid3">
+                    <img src="/assets/assets/ntfs/nft-2.svg" alt="Beige">
+                </div>
+                <div class="grid4">
+            <thead>
+                <tr>
+                    <th class="gloop">GLOOP SERIES</th>
+                    <th class="top">TOP BID</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+                <tr>
+                <td  class="color">Beige</td>
+                <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
+                </tr>
+                <tr>
+                <td class="number">#12983</td>
+                <td class="days">1 day left</td>
+                </tr>
+            </tbody>
+            </div>
+            </table>
+
+            <table>
+                <div class="grid5">
+                    <img src="/assets/assets/ntfs/ntf-3.svg" alt="Red">
+                </div>
+                <div class="grid6">
+            <thead>
+                <tr>
+                    <th class="gloop">GLOOP SERIES</th>
+                    <th class="top">TOP BID</th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td class="color">Red man</td>
+                <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
+                </tr>
+                <tr>
+                <td class="number">#12983</td>
+                <td class="days">1 day left</td>
+                </tr>
+            </tbody>
+            </div>
+            </table>
+
+            <table>
+                <div class="grid7">
+                    <img src="/assets/assets/ntfs/ntf-4.svg" alt="Purple">
+                </div>
+                <div class="grid8">
+                <thead>
+                    <tr>
+                        <th class="gloop">GLOOP SERIES</th>
+                        <th class="top">TOP BID</th>
+                        </tr> 
+                </thead>
+                <tbody>
+                    <tr>
+                    <td class="color">Green</td>
+                    <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
+                    </tr>
+                    <tr>
+                    <td class="number">#12983</td>
+                    <td class="days">1 day left</td>
+                    </tr>
+                </tbody>
+                </div>
+                </table>
+
+         </div>
+        </section>
+
+        <section class="five">
+
+            
+        </section>
+
+
     </main>
 
 
