section class="five"

--- a/index.html
+++ b/index.html
@@ -155,10 +155,21 @@
         </section>
 
         <section class="five">
-
-            
+            <div class="text">
+                <h5>LAUNCHING SON</h5>
+                <h1>An NFT like no other</h1>
+                <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="image">
+                <img src="/assets/assets/upsell-footer-image.svg" alt="upsell">
+            </div>
         </section>
 
+        <section class="six">
+            
+
+        </section>
 
     </main>
 
