--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/7e5158fb14.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -35,7 +36,7 @@
         </section>
 
         <section class="two">
-            <h2>Free NFT for early birs</h2>
+            <h2>Free NFT for early birds</h2>
             <p>Sign up today and you'll get a free NFT when we launch.</p>
         </section>
 
@@ -54,7 +55,7 @@
             </div>
 
          <div class="four-table">
-            <table>
+            <table class="pirmas">
             <div class="grid1">   
                 <img src="/assets/assets/ntfs/ntf-1.svg" alt="Purple">
             </div>
@@ -78,7 +79,7 @@
             </div>
             </table>
 
-            <table>
+            <table class="antras">
                 <div class="grid3">
                     <img src="/assets/assets/ntfs/nft-2.svg" alt="Beige">
                 </div>
@@ -103,7 +104,7 @@
             </div>
             </table>
 
-            <table>
+            <table class="trecias">
                 <div class="grid5">
                     <img src="/assets/assets/ntfs/ntf-3.svg" alt="Red">
                 </div>
@@ -127,7 +128,7 @@
             </div>
             </table>
 
-            <table>
+            <table class="ketvirtas">
                 <div class="grid7">
                     <img src="/assets/assets/ntfs/ntf-4.svg" alt="Purple">
                 </div>
@@ -167,11 +168,56 @@
         </section>
 
         <section class="six">
-            
+            <div class="mysix">
+               <div class="left">
+                <img src="/assets/assets/logo.svg" alt="logo">
+                <p>Exclusive NFT Collection</p>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+               </div> 
+               <div class="right">
+                   
+                        <table>
+                            <thead>
+                                <tr>
+                                <th>ABOUT</th>
+                                <th>NFT</th>
+                                <th>CONTACT</th>
+                                <th>SOCIAL</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#">About</a></td>
+                                    <td><a href="#">OpenSea</a></td>
+                                    <td><a href="#">Press</a></td>
+                                    <td><a href="#">Twitter</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">Terms</a></td>
+                                    <td><a href="#">Maker</a></td>
+                                    <td><a href="#">Support</a></td>
+                                    <td><a href="#">Instagram</a></td>
+                                    <tr>
+                                        <td><a href="#">Legal</a></td>
+                                        <td><a href="#">Learn</a></td>
+                                    </tr>
+                            </tbody>
+                        </table>
+
+               </div>
+            </div>
 
         </section>
 
     </main>
+
+    <footer>
+        <p class="pad1">&copy; Copyright 2022 NFTlanding</p>
+        <p class="pad2">Launching August 2022</p>
+    </footer>
 
 
 
