--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="one">
             <div class="text">
-                <h5>LAUNCHING SON</h5>
+                <h5>LAUNCHING SOON</h5>
                 <h1>An NFT like no other</h1>
                 <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
                 <button>Sign Up</button>
@@ -56,17 +56,15 @@
 
          <div class="four-table">
             <table class="pirmas">
-            <div class="grid1">   
-                <img src="/assets/assets/ntfs/ntf-1.svg" alt="Purple">
-            </div>
-            <div class="grid2">
-            <thead>
-                <tr>
-                    <th class="gloop">GLOOP SERIES</th>
-                    <th class="top">TOP BID</th>
-                    </tr>
-            </thead>
+            <div class="grid1">
             <tbody>
+                <tr>
+                <td colspan="2"><img src="/assets/assets/ntfs/ntf-1.svg" alt="Purple"></td>
+                </tr>
+                <tr>
+                <td class="gloop">GLOOP SERIES</td>
+                <td class="top">TOP BID</td>
+                </tr>
                 <tr>
                 <td class="color">Purple man</td>
                 <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
@@ -80,18 +78,15 @@
             </table>
 
             <table class="antras">
-                <div class="grid3">
-                    <img src="/assets/assets/ntfs/nft-2.svg" alt="Beige">
-                </div>
-                <div class="grid4">
-            <thead>
-                <tr>
-                    <th class="gloop">GLOOP SERIES</th>
-                    <th class="top">TOP BID</th>
-                </tr>
-            </thead>
+                <div class="grid2">
             <tbody>
-                
+                <tr>
+                <td colspan="2"><img src="/assets/assets/ntfs/nft-2.svg" alt="Beige"></td>
+                </tr>
+                <tr>
+                <td class="gloop">GLOOP SERIES</td>
+                <td class="top">TOP BID</td>
+                </tr>
                 <tr>
                 <td  class="color">Beige</td>
                 <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
@@ -105,17 +100,17 @@
             </table>
 
             <table class="trecias">
-                <div class="grid5">
-                    <img src="/assets/assets/ntfs/ntf-3.svg" alt="Red">
-                </div>
-                <div class="grid6">
-            <thead>
-                <tr>
-                    <th class="gloop">GLOOP SERIES</th>
-                    <th class="top">TOP BID</th>
-                    </tr>
-            </thead>
+                <div class="grid3">
             <tbody>
+                <tr>
+                    <td colspan="2">
+                        <img src="/assets/assets/ntfs/ntf-3.svg" alt="Red">
+                    </td>
+                </tr>
+                <tr>
+                <td class="gloop">GLOOP SERIES</td>
+                <td class="top">TOP BID</td>
+                </tr>
                 <tr>
                 <td class="color">Red man</td>
                 <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
@@ -129,17 +124,17 @@
             </table>
 
             <table class="ketvirtas">
-                <div class="grid7">
-                    <img src="/assets/assets/ntfs/ntf-4.svg" alt="Purple">
-                </div>
-                <div class="grid8">
-                <thead>
-                    <tr>
-                        <th class="gloop">GLOOP SERIES</th>
-                        <th class="top">TOP BID</th>
-                        </tr> 
-                </thead>
+                <div class="grid4">
                 <tbody>
+                    <tr>
+                    <td colspan="2">
+                        <img src="/assets/assets/ntfs/ntf-4.svg" alt="Purple">
+                    </td>
+                    </tr>
+                    <tr>
+                    <td class="gloop">GLOOP SERIES</td>
+                    <td class="top">TOP BID</td>
+                    </tr>
                     <tr>
                     <td class="color">Green</td>
                     <td class="price"><img src="/assets/assets/eth.svg" alt="eth">2.99 ETH</td>
@@ -179,50 +174,42 @@
                </div> 
                <div class="right">
                    
-                        <table>
-                            <thead>
-                                <tr>
-                                <th>ABOUT</th>
-                                <th>NFT</th>
-                                <th>CONTACT</th>
-                                <th>SOCIAL</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><a href="#">About</a></td>
-                                    <td><a href="#">OpenSea</a></td>
-                                    <td><a href="#">Press</a></td>
-                                    <td><a href="#">Twitter</a></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="#">Terms</a></td>
-                                    <td><a href="#">Maker</a></td>
-                                    <td><a href="#">Support</a></td>
-                                    <td><a href="#">Instagram</a></td>
-                                    <tr>
-                                        <td><a href="#">Legal</a></td>
-                                        <td><a href="#">Learn</a></td>
-                                    </tr>
-                            </tbody>
-                        </table>
-
+                    <table>
+                        <thead>
+                            <tr>
+                            <th>ABOUT</th>
+                            <th>NFT</th>
+                            <th>CONTACT</th>
+                            <th>SOCIAL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td><a href="#">About</a></td>
+                            <td><a href="#">OpenSea</a></td>
+                            <td><a href="#">Press</a></td>
+                            <td><a href="#">Twitter</a></td>
+                            </tr>
+                            <tr>
+                            <td><a href="#">Terms</a></td>
+                            <td><a href="#">Maker</a></td>
+                            <td><a href="#">Support</a></td>
+                            <td><a href="#">Instagram</a></td>
+                            <tr>
+                            <td><a href="#">Legal</a></td>
+                            <td><a href="#">Learn</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                </div>
             </div>
-
         </section>
-
     </main>
 
     <footer>
         <p class="pad1">&copy; Copyright 2022 NFTlanding</p>
         <p class="pad2">Launching August 2022</p>
     </footer>
-
-
-
-
-
 
 </div>
 </body>
